cabal-version:      3.4
name:               StateMonad
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , plutus-simple-model
                    , mtl
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors


library
    import:             common-all
    hs-source-dirs:     lecture
    exposed-modules:    State
                        NegativeRTimed
                        ExploitableSwap
                        Count
                        State1
                        StatefullUTxO
                        State2
                        Statenoput
                        Countevalstate


test-suite StateMonad-PSM
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            PSM.hs
    hs-source-dirs:     lecture_tests
    build-depends:      StateMonad

test-suite StateMonad-UTNegativeRTimed
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            UTNegativeRTimed.hs
    hs-source-dirs:     lecture_tests
    build-depends:      StateMonad

test-suite StateMonad-PTNegativeRTimed
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            PTNegativeRTimed.hs
    hs-source-dirs:     lecture_tests
    build-depends:      StateMonad

test-suite StateMonad-TExploitableSwap
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            TExploitableSwap.hs
    hs-source-dirs:     homework
    build-depends:      StateMonad